# P2CL

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
analysis/: CMakeLists.txt  analyzer.cpp  analyzer.hpp  bufferacc.cpp  bufferacc.hpp  extheadnode.cpp  extheadnode.hpp  fusionprobe.cpp  fusionprobe.hpp  iterationnode.cpp  iterationnode.hpp  kernelacc.cpp  kernelacc.hpp  node.cpp  node.hpp  opnode.cpp  opnode.hpp  typeacc.cpp  typeacc.hpp  voidnode.cpp  voidnode.hpp
api/: CMakeLists.txt  circularindex.hpp  process.cpp  process.hpp  wtime.hpp
evaluation/: CMakeLists.txt
evaluation/map/: concurrent_eval.ccode  concurrent_eval.cpp  concurrent_eval.py  map.ccode  map.cl  map.cpp  map.xml  map_hand.c  map_single_thread.cpp  overhead_eval.py  overhead_hand_eval.py
evaluation/mapreduce/: mapreduce.ccode  mapreduce.cl  mapreduce.cpp  mapreduce.xml  mapreduce_hand.c  mapreduce_hand_eval.py
evaluation/reshape/: reshape.cl.tmp  reshape.cpp.tmp  reshape.sh  reshape.xml.tmp  reshape_hand.c  reshape_hand.sh
examples/: fft.ccode  fft.cpp  fft.xml  fft_multithread.cpp  integration.cpp  integration.xml  synthesized.ccode  transpose.xml  transposetest.cpp  vector_mul.ccode  vector_mul.cpp  vector_mul.xml
frontend/: CMakeLists.txt  exception.cpp  exception.hpp  frontendutils.cpp  frontendutils.hpp  paracontainer.cpp  paracontainer.hpp  parameter.cpp  parameter.hpp  xmlparser.cpp  xmlparser.hpp
runtime/: .executant.cpp.swp  CMakeLists.txt  err_code.hpp  eventsbox.cpp  eventsbox.hpp  executant.cpp  executant.hpp
skeletons/: CMakeLists.txt  arrangementop.cpp  arrangementop.hpp  cfunction.cpp  cfunction.hpp  changeNameSpace.sh  computationop.cpp  computationop.hpp  ctype.cpp  ctype.hpp  fusedop.cpp  fusedop.hpp  gatherop.cpp  gatherop.hpp  mapop.cpp  mapop.hpp  operation.cpp  operation.hpp  reduceop.cpp  reduceop.hpp  scatterop.cpp  scatterop.hpp  transposeop.cpp  transposeop.hpp
